# sciter-hello-world

./: CMakeLists.txt  main.cpp
ui/: main.html
